--- a/web/src/main/resources/templates/footer/about.html
+++ b/web/src/main/resources/templates/footer/about.html
@@ -13,28 +13,24 @@
 <div th:include="head/head">Head</div>
 <div class="wrapper h400">
 		<div th:include="productcategory/secondCategories">Head</div>
-		<div class="crumb news-crumb">
-			<a href="/">首页</a>
-			<i>></i>
-			<i>公司简介</i>
-		</div>	
 		<div class="mainwrapper clearfix">
-			<div class="aside fl">
-				<a class="active">公司简介</a>
+			<div class="footerlist fl">
+				<h3 class="aboutTitle">关于优捷实验</h3>
+				<a class="active" >公司简介</a>
 				<a href="/statement">法律声明</a>
 				<a href="/recruitment">招贤纳士</a>
 				<a href="/contactUs">联系我们</a>
 				<a href="/problems">常见问题</a>
 			</div>
-			<div class="mainpanel fr">
+			<div class="mainpaneltest fr">
 				<div class="news-wrap">
-					<h2 style="text-indent: 36px;">优捷实验协同采购平台（以下简称“优捷实验”），隶属于上海申捷卫生科技股份有限公司，成立于2005年12月，是一家从事公共卫生领域技术及服务的专业公司。</h2>
-					<h2>&nbsp;</h2>
-					<h2 style="text-indent: 36px;">优捷实验，定位于实验室产品和服务的一站式采购平台，致力于方便用户采购工作环节，并为实验室工作人员提供丰富的实验解决方案，满足用户在科研研发等方面需求。</h2>
-					<h2>&nbsp;</h2>
-					<h2 style="text-indent: 36px;">优捷实验同样致力于服务实验室产品和服务的供应商，为相关企业提供一个展现仪器、试剂、耗材和服务等各类信息的平台，并不定期进行各类运营活动，提升企业产品展示、品牌曝光。</h2>
-					<h2>&nbsp;</h2>
-					<h2 style="text-indent: 36px;">优捷实验将尊重并吸纳用户意见，把互联网技术与实验室产品行业相结合，不断改进各项服务与体验，提升实验室行业工作人员的效率，真正做到为大家服务。</h2>
+					<h2 class="text14" style="text-indent: 30px;">优捷实验协同采购平台（以下简称“优捷实验”），隶属于上海申捷卫生科技股份有限公司，成立于2005年12月，是一家从事公共卫生领域技术及服务的专业公司。</h2>
+					<h2 class="text14">&nbsp;</h2>
+					<h2 class="text14" style="text-indent: 30px;">优捷实验，定位于实验室产品和服务的一站式采购平台，致力于方便用户采购工作环节，并为实验室工作人员提供丰富的实验解决方案，满足用户在科研研发等方面需求。</h2>
+					<h2 class="text14">&nbsp;</h2>
+					<h2 class="text14" style="text-indent: 30px;">优捷实验同样致力于服务实验室产品和服务的供应商，为相关企业提供一个展现仪器、试剂、耗材和服务等各类信息的平台，并不定期进行各类运营活动，提升企业产品展示、品牌曝光。</h2>
+					<h2 class="text14">&nbsp;</h2>
+					<h2 class="text14" style="text-indent: 30px;">优捷实验将尊重并吸纳用户意见，把互联网技术与实验室产品行业相结合，不断改进各项服务与体验，提升实验室行业工作人员的效率，真正做到为大家服务。</h2>
 				</div>
 			</div>
 		</div>
