--- a/web/src/main/resources/templates/footer/footer.html
+++ b/web/src/main/resources/templates/footer/footer.html
@@ -1,11 +1,11 @@
 <div class="footer">
 			<div class="foot-hd">
 				<p>
-					<a href="/about">公司简介</a> 
-					| <a href="/statement">法律声明</a>  
-					| <a href="/recruitment">招贤纳士</a> 
-					| <a href="/contactUs">联系我们</a> 
-					| <a href="/problems">常见问题</a> 
+					<a href="/about" target="_blank">公司简介</a> 
+					| <a href="/statement" target="_blank">法律声明</a>  
+					| <a href="/recruitment" target="_blank">招贤纳士</a> 
+					| <a href="/contactUs" target="_blank">联系我们</a> 
+					| <a href="/problems" target="_blank">常见问题</a> 
 				</p>
 			</div>
 			<div class="foot-bd">
