--- a/web/src/main/resources/templates/footer/statement.html
+++ b/web/src/main/resources/templates/footer/statement.html
@@ -13,15 +13,11 @@
 <div th:include="head/head">Head</div>
 <div class="wrapper h400">
 		<div th:include="productcategory/secondCategories">Head</div>
-		<div class="crumb news-crumb">
-			<a href="/">首页</a>
-			<i>></i>
-			<i>公司简介</i>
-		</div>	
 		<div class="mainwrapper clearfix">
-			<div class="aside fl">
+			<div class="footerlist fl">
+				<h3 class="aboutTitle">关于优捷实验</h3>
 				<a href="/about">公司简介</a>
-				<a  class="active">法律声明</a>
+				<a class="active">法律声明</a>
 				<a href="/recruitment">招贤纳士</a>
 				<a href="/contactUs">联系我们</a>
 				<a href="/problems">常见问题</a>
