--- a/admin/src/main/resources/templates/information/create.html
+++ b/admin/src/main/resources/templates/information/create.html
@@ -24,6 +24,13 @@
 				</div>
 			</div>
 			<div class="form-group">
+                <label class="control-label col-sm-1">来源</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control" name="createBy" ng-model="item.createBy" ng-maxlength="64" />
+                    <span ng-show="infoForm.createBy.$error.maxlength">长度应小于64</span>
+                </div>
+            </div>
+			<div class="form-group">
 				<label class="control-label col-sm-1">分类</label>
 				<div class="col-sm-3">
 					<select ng-model="item.category" name="category" ng-options="c.id as c.name for c in categories" class="form-control" ng-required="true"></select>
