--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -16,6 +16,13 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="control-label col-sm-1">来源</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control" name="createdBy" ng-model="item.createdBy" ng-maxlength="64" />
+                    <span ng-show="subjectForm.createdBy.$error.maxlength">长度应小于64</span>
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="control-label col-sm-1">分类</label>
                 <div class="col-sm-11">
                     <select class="w300" ng-options="c.id as c.name for c in categories" ng-model="item.category" required="true"></select>
