--- a/web/src/main/resources/templates/user/provider/maintain.html
+++ b/web/src/main/resources/templates/user/provider/maintain.html
@@ -46,7 +46,6 @@
 									<tr>
 										<th>提交日期</th>
 										<th>产品名称</th>
-										<th width="300">类别</th>
 										<th>产品价格</th>
 										<th>状态</th>
 										<th>操作</th>
@@ -54,29 +53,24 @@
 								</thead>
 								<tbody>
 									<tr th:each="product:${lists.getContent()}" th:id="'tr'+${product.id}" th:switch="${product.status.toString()}" >
-										<td th:text="${#dates.format(product.createdTime, 'yyyy-MM-dd')}">2015年01月11日</td>
-										<td><a th:text="${product.name}" th:href="@{/provider/products/__${product.id}__?detail}" target="view_window">名称名称</a></td>
-										<td>
-											<span class="one-sort" th:text="${#strings.abbreviate(product.firstCategory.name,15)}">仪器</span>
-											<span th:text="${#strings.abbreviate(product.secondCategory.name,15)}">生物芯片</span>
-											<span th:text="${#strings.abbreviate(product.thirdCategory.name,15)}">芯片扫描仪</span>
-										</td>
-										<td>￥<i th:text="${product.price}"></i></td>
-										<td>
+										<td class="mt_date" th:text="${#dates.format(product.createdTime, 'yyyy-MM-dd')}">2015年01月11日</td>
+										<td class="mt_name"><a th:href="@{/provider/products/__${product.id}__?detail}" target="view_window"><div th:text="${product.name}">名称名称</div></a></td>
+										<td class="mt_price">￥<i th:text="${product.price}"></i></td>
+										<td class="mt_status">
 											<a th:text="${product.status.getName()}"></a>
 										</td>
-											<td  th:attr="data-id=${product.id}" th:case="${'EXAMINE'}">
-													<a class="blue revoke">撤销</a>
-											</td>
-											<td  th:attr="data-id=${product.id}" th:case="${'UP'}">
-													<a class="blue down">下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'" target="_blank">修改</a>
-											</td>
-											<td  th:attr="data-id=${product.id}" th:case="${'DOWN'}">
-													<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'" target="_blank">修改</a>
-											</td>
-											<td  th:attr="data-id=${product.id}" th:case="${'NOT'}">
-													<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'" target="_blank">修改</a>
-											</td>
+										<td class="mt_operation"  th:attr="data-id=${product.id}" th:case="${'EXAMINE'}">
+												<a class="blue revoke">撤销</a>
+										</td>
+										<td class="mt_operation"  th:attr="data-id=${product.id}" th:case="${'UP'}">
+												<a class="blue down">下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'" target="_blank">修改</a>
+										</td>
+										<td class="mt_operation"  th:attr="data-id=${product.id}" th:case="${'DOWN'}">
+												<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'" target="_blank">修改</a>
+										</td>
+										<td class="mt_operation"  th:attr="data-id=${product.id}" th:case="${'NOT'}">
+												<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'" target="_blank">修改</a>
+										</td>
 									</tr>
 								</tbody>
 							</table>
