--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 		<script th:src="@{/js/jquery-1.11.2.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/searchForm.js}"></script>
-		<script th:src="@{/js/script.js}"></script>
+		<script type="text/javascript" th:src="@{/js/script.js}"></script>
 		<script type="text/javascript">
             $(function() {
                 var token = $("meta[name='_csrf']").attr("content");
