--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -42,6 +42,10 @@
 	                        <input class="form-control" disabled="true" ng-value="item.label" />
 	                    </div>
 	                </div>
+	                <div class="form-group">
+	                    <div class="control-label col-sm-2" style="width: 100%;text-align: left;padding-left: 20px;"> 商品详情 </div>
+	                    <div class="col-sm-10" style="padding-left: 0px;" ng-bind-html="content"></div>
+	                </div>
             	</div>
             	<div class="col-sm-6">
             		<div class="form-group">
@@ -74,14 +78,10 @@
 	                        <input class="form-control" disabled="true" ng-value="item.specifications" />
 	                    </div>
 	                </div>
-	                <div class="form-group">
-	                    <label class="control-label col-sm-2"> 商品详情 </label>
-	                    <div class="col-sm-10" ng-bind-html="content"></div>
-	                </div>
             	</div>            	
                 <div class="form-group">
-                  	<label class="control-label col-sm-1 ml10">解决方案</label>
                     <div class="col-sm-10 li-line">
+                  	<label class="control-label ml10" style="padding-left: 8px;">解决方案</label>
 	                     <ul>
 	                         <li ng-repeat="s in solutions">
 	                             <label>{{s.name}}</label>
